# esp-iot-solution

components/motor/esp_simplefoc/: CMakeLists.txt
components/motor/esp_simplefoc/port/esp/: esp_hal_bldc_3pwm.cpp  esp_hal_current_sense.cpp
components/robotbox/: CMakeLists.txt  idf_component.yml  robotbox.cpp
components/robotbox/include/: robotbox.hpp
components/robotbox/test_apps/: CMakeLists.txt
components/robotbox/test_apps/main/: CMakeLists.txt  test_robotbox.cpp
components/sensors/humiture/sht3x/: CMakeLists.txt  idf_component.yml  sht3x.c
components/sensors/humiture/sht3x/include/: sht3x.h
components/sensors/sensor_hub/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  iot_sensor_hub.c  linker.lf  sensorhub.md
components/sensors/sensor_hub/hal/: humiture_hal.c  imu_hal.c  light_sensor_hal.c
components/sensors/sensor_hub/include/: iot_sensor_hub.h  sensor_hub_amp_link.h  sensor_hub_lp_detect.h  sensor_hub_lp_internal.h  sensor_type.h
components/sensors/sensor_hub/include/hal/: humiture_hal.h  imu_hal.h  light_sensor_hal.h
components/sensors/sensor_hub/subcore/: CMakeLists.txt  subcore_config.cmake
components/sensors/sensor_hub/subcore/main/: CMakeLists.txt  main.c
components/sensors/sensor_hub/test_apps/: CMakeLists.txt  sdkconfig.defaults
components/sensors/sensor_hub/test_apps/lp/: CMakeLists.txt  main.c
components/sensors/sensor_hub/test_apps/main/: CMakeLists.txt  sensor_hub_test.c  snesor_hub_test.c  virtual_humiture_sensor.c
examples/ai/esp_dl/house_price_predict/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32p4
examples/ai/esp_dl/self_learning_classification/: sdkconfig.defaults
examples/ai/tflite_micro/imu_motion_estimation/: CMakeLists.txt
examples/robot/ragtime_panthera/: CMakeLists.txt  sdkconfig.defaults
examples/robot/ragtime_panthera/components/apps/: CMakeLists.txt  apps.h
examples/robot/ragtime_panthera/components/apps/panthera_ctrl/: panthera_ctrl.cpp  panthera_ctrl.h
examples/robot/ragtime_panthera/components/apps/panthera_ctrl/assets/: img_panthera_ctrl.c
examples/robot/ragtime_panthera/components/apps/panthera_ctrl/ui/: ui.c  ui.h
examples/robot/ragtime_panthera/components/apps/panthera_ctrl/ui/images/: ui_img_left_png.c  ui_img_right_png.c
examples/robot/ragtime_panthera/components/apps/panthera_ctrl/ui/screens/: ui_RobotCtrlScreen.c  ui_RobotCtrlScreen.h
examples/robot/ragtime_panthera/components/apps/panthera_grasp/: panthera_grasp.cpp  panthera_grasp.h  usb_camera.cpp
examples/robot/ragtime_panthera/components/apps/panthera_grasp/assets/: img_panthera_grasp.c
examples/robot/ragtime_panthera/components/apps/panthera_grasp/ui/screens/: ui_RobotGraspScreen.c  ui_RobotGraspScreen.h
examples/robot/ragtime_panthera/main/: CMakeLists.txt  Kconfig.projbuild  app_lcd.cpp  idf_component.yml  ragtime_panthera.cpp
examples/robotic/arm_control/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/robotic/arm_control/main/: CMakeLists.txt  Kconfig.projbuild  app_cam.c  app_lcd.cpp  app_manager.cpp  app_qwen_vl.cpp  app_spiffs.cpp  app_wifi.cpp  arm_control.cpp  idf_component.yml  kinematics.cpp
examples/robotic/arm_control/main/include/: app_lcd.hpp  app_manager.hpp  app_qwen_vl.hpp  app_spiffs.hpp  app_wifi.hpp
examples/robotic/arm_control/main/ui/: ui.c  ui.h  ui_Screen1.c  ui_events.h  ui_helpers.c  ui_helpers.h
examples/usb/device/uac_audio_test/: CMakeLists.txt
examples/usb/device/uac_audio_test/main/: CMakeLists.txt  idf_component.yml  uac_audio_test.c
examples/usb/device/uac_audio_test/main/tusb/: tusb_config.h  usb_descriptors.c  usb_descriptors.h
examples/usb/device/uac_test/: CMakeLists.txt
examples/usb/device/uac_test_speaker/: CMakeLists.txt
examples/vision/opencv/aruco_tracker/: CMakeLists.txt  modify_opencv.py  sdkconfig.defaults.esp32p4
tools/ci/: astyle-rules.yml  check_copyright_config.yaml
(+67 files in other folders)
